Linked about me and Jumbotron

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <title>Personal Portfolio | Jester Domingo</title>
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
@@ -14,7 +14,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <img src="/images/Jester Icon Transparent.png" alt="">
+            <img src="/images/Jester Icon Transparent.png" class="nav_img" alt="">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About Me</a>
+                <a class="nav-link active" aria-current="page" href="/about">About Me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Projects</a>
@@ -41,9 +41,19 @@
       </nav>
       <!--END OF NAV-->
     <!--WELCOME TEXT-->
-    <h1 class="display-1 text-center welcome-text">Welcome!</h1>
+    <div class="welcome-text-div">
+    <h1 class="display-1 text-center">Welcome!</h1>
     <h1 class="display-5 text-center p-2">Thank you for visiting my Portfolio!</h1>
+    </div>
     <!--END OF WELCOME TEXT-->
+    <!--JUMBOTRON-->
+    <div class="jumbotron jumbotron-fluid bg-dark-subtle jumbotron_pad">
+      <div class="container">
+        <h1 class="display-4">Mission Statement</h1>
+        <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam quae fugiat necessitatibus, explicabo sunt aut odio porro eius labore et delectus facere cumque ratione? Explicabo maxime velit nemo vitae quas?</p>
+      </div>
+    </div>
+    <!--END OF JUMBOTRON-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
