layouts landing page fixed contact us and service pages working

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,10 +8,12 @@
 <body>
     <%- include('partial/navigation') %>
     <!--WELCOME TEXT-->
+    <div class="bg-image" style=" background-image: url('/images/aboutme_bg.jpg'); height: 100vh;">
         <div class="header-text-div" style="padding-bottom: 30%;">
-        <h1 class="display-1 text-center">About Me!</h1>
+            <h1 class="display-1 text-center">About Me!</h1>
         <h1 class="display-5 text-center p-2">Thanks for taking an interest in me!</h1>
         </div>
+    </div>
         <!--END OF WELCOME TEXT-->
         <!--CARD-->
         <div class="card mb-3 mx-auto" style="width: 90%; height: 400px;">
