--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,12 +17,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+  <%- include('partial/navigation') %>
     <!--WELCOME TEXT-->
     <div class="bg-image" style=" background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/images/76.webp'); height: 100vh;">
-    <div class="welcome-text-div">
-    <h1 class="display-1 text-center">Welcome!</h1>
-    <h1 class="display-5 text-center p-2">Thank you for visiting my Portfolio!</h1>
-    </div>
+      <div class="welcome-text-div">
+        <h1 class="display-1 text-center">Welcome!</h1>
+        <h1 class="display-5 text-center p-2">Thank you for visiting my Portfolio!</h1>
+      </div>
     </div>
     <!--END OF WELCOME TEXT-->
     <!--JUMBOTRON-->
@@ -33,6 +34,7 @@
       </div>
     </div>
     <!--END OF JUMBOTRON-->
+    <%- include('partial/footer') %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
