--- a/views/partial/navigation.ejs
+++ b/views/partial/navigation.ejs
@@ -20,7 +20,7 @@
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <img src="/images/Jester Icon Transparent.png" class="nav_img" alt="">
+            <a href="/home"><img src="/images/Jester Icon Transparent.png" class="nav_img" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,16 +30,16 @@
                 <a class="nav-link active" aria-current="page" href="/home">Home</a>
               </li>
               <li class="nav-item nav_space">
-                <a class="nav-link active" aria-current="page" href="/about">About Me</a>
+                <a class="nav-link active" aria-current="page" href="/about">About</a>
               </li>
               <li class="nav-item nav_space">
                 <a class="nav-link active" aria-current="page" href="/projects">Projects</a>
               </li>
               <li class="nav-item nav_space">
-                <a class="nav-link active" aria-current="page" href="#">Services</a>
+                <a class="nav-link active" aria-current="page" href="/services">Services</a>
               </li>
               <li class="nav-item nav_space">
-                <a class="nav-link active" aria-current="page" href="#">Contact Me</a>
+                <a class="nav-link active" aria-current="page" href="/contact">Contact</a>
               </li>
             </ul>
           </div>
