final commit | fixed and adjusted all

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -26,7 +26,7 @@
                 </div>
               </div>
               <div class="card__content">
-                <h3>Design</h3>
+                <h3>UI/UX Designing</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <a href="#">Read More</a>
               </div>
@@ -38,7 +38,7 @@
                 <div class="card__icon-bx"><i class="fa-solid fa-code"></i></div>
               </div>
               <div class="card__content">
-                <h3>Development</h3>
+                <h3>Software Dev.</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <a href="#">Read More</a>
               </div>
@@ -50,7 +50,7 @@
                 <div class="card__icon-bx"><i class="fa-solid fa-rocket"></i></div>
               </div>
               <div class="card__content">
-                <h3>Lauch</h3>
+                <h3>Launching</h3>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                 <a href="#">Read More</a>
               </div>
