--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
     <%- include('partial/navigation') %>
     <!--WELCOME TEXT-->
     <div class="bg-image" style=" background-image: url('/images/aboutme_bg.jpg'); height: 100vh;">
-        <div class="header-text-div" style="padding-bottom: 30%;">
+        <div class="welcome-text-div">
             <h1 class="display-1 text-center">About Me!</h1>
         <h1 class="display-5 text-center p-2">Thanks for taking an interest in me!</h1>
         </div>
