--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -32,7 +32,7 @@
                     <input type="email" name="email" id="email" required>
                     <label for="message">Message</label>
                     <textarea name="message" id="message" cols="30" rows="5" required></textarea>
-                    <input type="submit" value="submit">
+                    <input type="submit" value="Link Up!">
                 </form>
             </div>
         </div>
